--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,7 @@ html {
     z-index: 1;
     max-width: 720px;
     margin: 0 auto;
-    font-size: 116px;
+    font-size: 7.25em;
     letter-spacing: 3.5px;
     text-align: center;
     text-transform: uppercase;
@@ -62,10 +62,10 @@ html {
     top: 180px;
     right: 20px;
     max-width: 760px;
-    border: 2px solid #000;
+    border: 2px solid currentColor;
     border-radius: 20px;
     padding: 36px 44px;
-    box-shadow: 0 12px 0 #000;
+    box-shadow: 0 12px 0 currentColor;
     color: #000;
     font-weight: normal;
     font-size: 35px;
